# characterization

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  README.rst  pyproject.toml  tox.ini
.github/workflows/: test.yaml  tests.yaml  tox.yaml
check/: example.py
docs/: .readthedocs.yaml  conf.py  dev.rst  index.rst  installation.rst  intro.rst  user.rst
docs/_templates/: layout.html
perform/: example.py
performance/: example.py
performe/: example.py
scripts/: cli.py  performe.py
tests/: test_example.py
tests/data/: xyz.fits
