[tool.poetry]
name = "performance"
version = "0.1.0"
description = "Procedures for antenna performance"
authors = [
    "Francesca Loi <francesca.loi@inaf.it>",
    "Marco Marongiu <marco.marongiu@inaf.it>",
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^5.3"
prefect = "^2.10.16"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.7"
tox = "^4.6.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
pre-commit = "^3.3.3"
mypy = "^1.4.0"
reorder-python-imports = "^3.10.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.0"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
